# kanransha

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/memory/: manager.h  tagged_ptr.h
test/memory/: CMakeLists.txt  tagged_ptr_test.cpp
